--- a/src/docker.env
+++ b/src/docker.env
@@ -1,7 +1,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=password
 POSTGRES_DB=postgres
-POSTGRES_HOST=localhost
+POSTGRES_HOST=ee-database-1.cacr34qdwc0w.us-east-2.rds.amazonaws.com
 POSTGRES_PORT=5432
 
 PGADMIN_DEFAULT_EMAIL=admin@admin.com
